# L1DeepMetv2-FlowGNN

./: .gitignore  README.md  graph_met_network.cpp  helper.cpp  l1deepmetv2_compute.cc  main.cpp
L1DeepMetv2-Golden/: dcl.h  helper.h  l1deepmetv2_compute.cc  l1deepmetv2_compute.cpp  load_weights.cpp  main.cpp
L1DeepMetv2-Golden/weight_bin/: weights.txt
test/: CMakeLists.txt  GraphMetNetwork.cpp  GraphMetNetwork.h  build_command.txt  compare_outputs.ipynb  comparison.py  evaluate.py  evaluate_cmodel.ipynb  failed_cases.json  goldenc_validation.ipynb  main.cpp  parameters.h  plot_response_resolution.ipynb  radius_graph.cpp  test_main.cpp  test_torch_performance.py
